Send answer and exercise Id to frontend
