# backend/src/main/resources/api/swagger.yaml
@@ -97,7 +97,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: "#/definitions/Exercise"
+              $ref: "#/definitions/NewExercise"
     post:
       tags:
       - "exercise"
@@ -641,6 +641,9 @@ definitions:
     - "text"
     - "checked"
     properties:
+      answerId:
+        type: "integer"
+        format: "int64"
       text:
         type: "string"
       checked:
@@ -653,6 +656,9 @@ definitions:
     - "question"
     - "answertemplates"
     properties:
+      id:
+        type: "integer"
+        format: "int64"
       name:
         type: "string"
         example: "IPv4"
@@ -684,6 +690,11 @@ definitions:
         type: "array"
         items:
           type: "string"
+      answerIds:
+              type: "array"
+              items:
+                type: "integer"
+                format: "int64"
 
   NewExecution:
       type: "object"
